@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 1.0.4  Wed...
+          - changed latency calculation (use time of next_check instead of time of job submission)
           - added nsca replacements docs
 
 1.0.3  Wed Mar 23 21:53:09 CET 2011
